# ai-proto-tool

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/: 2026-05-07-ai-prototyper-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_commands.rs  canvas_commands.rs  chat_commands.rs  export_commands.rs  memory_commands.rs  mod.rs  model_commands.rs  page_commands.rs  project_commands.rs  snapshot_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs  repository.rs
src-tauri/src/export/: html_generator.rs  mod.rs
src-tauri/src/fs/: dirs.rs  io.rs  mod.rs
src/canvas/: linkManager.ts
src/hooks/: useAutoSave.ts  useCanvas.ts  useKeyboardShortcuts.ts  useStreamingChat.ts  useTheme.ts  useToolManager.ts
src/i18n/: index.ts
src/memory/: MemoryManager.ts
src/skills/: SkillEngine.ts  SkillRegistry.ts
src/stores/: canvasStore.ts  chatStore.ts  componentStore.ts  exportStore.ts  linkStore.ts  memoryStore.ts  modelStore.ts  projectStore.ts  settingsStore.ts  snapshotStore.ts  uiStore.ts
src/styles/: globals.css
src/templates/: TemplateRegistry.ts  templates.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: canvasSerializer.ts
tests/: App.test.tsx  i18n.test.ts
tests/ai/: ChatEngine.test.ts  ContextBuilder.test.ts  PrototypeRenderer.test.ts  ResponseParser.test.ts  providers.test.ts  types.test.ts
tests/canvas/: linkManager.test.ts
tests/hooks/: useAutoSave.test.ts  useKeyboardShortcuts.test.ts  (+1 more)
(+93 files in other folders)
